angery reacts only

--- a/package.json
+++ b/package.json
@@ -45,5 +45,8 @@
     "setup": "node ./bin/setup.js",
     "netlify:login": "netlify login",
     "netlify:deploy": "netlify deploy -d public -p"
+  },
+  "resolutions": {
+    "sharp": "0.24.0"
   }
 }
